# buster

./: .gitignore  LICENSE.md  README.md  app.py  chatbot.py  db_to_csv.ipynb  docparser.py  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yaml  tests.yaml
buster/: buster.py  busterbot.py  chatbot.py  db.py  docparser.py  parser.py  pdfparser.py  scraper.py  utils.py
buster/apps/: bot_configs.py  gradio_app.ipynb  gradio_app.py  slackbot.py
buster/completers/: __init__.py  base.py  chatgpt.py  togetherai.py  user_inputs.py
buster/data/: documents.csv  documents.db  sections.pkl
buster/db/: backward.py  documents.py  schema.py
buster/documents/: __init__.py  base.py  deeplake.py  pickle.py  service.py  sqlite.py  utils.py
buster/documents/sqlite/: __init__.py  backward.py  documents.py  schema.py
buster/documents_manager/: base.py  deeplake.py  service.py
buster/examples/: cfg.py  embeddings.csv  fake_facts.csv  generate_embeddings.py  gradio_app.py  stackoverflow.csv
buster/formatter/: __init__.py  base.py  factory.py  gradio.py  html.py  markdown.py  slack.py
buster/formatters/: documents.py  prompts.py  questions.py
buster/llm_utils/: __init__.py  embeddings.py  question_reformulator.py
buster/notebooks/: db_to_csv.ipynb
buster/parsers/: __init__.py  parser.py
buster/retriever/: __init__.py  base.py  deeplake.py  pickle.py  service.py  sqlite.py
buster/summarizer/: __init__.py  base.py  chunks.py  utils.py
buster/tokenizers/: __init__.py  base.py  gpt.py
buster/validators/: __init__.py  base.py  question_answer_validator.py  validators.py
docs/: conf.py  index.rst  requirements.txt
docs/usage/: components.md  components_overview.md  configuration.md  custom_docs.md  guide.rst  installation.md  quickstart.md
tests/: test_chatbot.py  test_db.py  test_docparser.py  test_documents.py  test_formatters.py  test_read_write.py  test_summarizer.py  test_validator.py
