[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "buster-doctalk"
version = "0.0.1"
description = "Buster 🤖: A chatbot for retrieval-augmented generation"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["buster"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.poetry]
name = "buster-doctalk"
version = "v0.0.1"
description = "Buster 🤖: A chatbot for retrieval-augmented generation"
license = "MIT"
authors = [
    "Jeremy Pinto <jerpint@gmail.com>",
    "Hadrien Bertrand <bertrand.hadrien@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/jerpint/buster"

packages = [
    { include = "buster" },
    { include = "buster/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
